--- a/.github/workflows/mac_ci.yaml
+++ b/.github/workflows/mac_ci.yaml
@@ -26,6 +26,8 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2.0.1
       with:
         auto-update-conda: true
+        auto-activate-base: true
+        activate-environment: ""
         python-version: ${{ matrix.python-version }}
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2  # use latest v2
