--- a/.github/workflows/mac_ci.yaml
+++ b/.github/workflows/mac_ci.yaml
@@ -28,6 +28,15 @@ jobs:
         auto-update-conda: true
         activate-environment: foo
         python-version: ${{ matrix.python-version }}
+    - name: Conda info
+      shell: bash
+      run: conda info
+    - name: Print python matrix.python-version
+      run: |
+        echo ${{ matrix.python-version }}
+    - name: Print conda info
+      run: |
+        conda info
     - name: Install TA lib (macOS)
       if: startsWith(matrix.os, 'macos')
       run: |
@@ -43,12 +52,6 @@ jobs:
         key: ${{ runner.os }}-pip-py${{matrix.python-version}}-${{ hashFiles(env.PIP_CONSTRAINT) }}
         restore-keys: |
           ${{ runner.os }}-pip-py${{matrix.python-version}}-
-    - name: Print python matrix.python-version
-      run: |
-        echo ${{ matrix.python-version }}
-    - name: Print conda info
-      run: |
-        conda info
     - name: Install scientific python requirements
       env:
         DISABLE_BCOLZ_AVX2: true
