--- a/.github/workflows/mac_ci.yaml
+++ b/.github/workflows/mac_ci.yaml
@@ -23,10 +23,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-    - uses: conda-incubator/setup-miniconda@v2.0.1
+    - name: Setup conda
+      uses: s-weigand/setup-conda@v1
       with:
-        auto-update-conda: true
-        activate-environment: foo
+        update-conda: true
         python-version: ${{ matrix.python-version }}
     - name: Conda info
       shell: bash
